# neptune-mcp

./: .gitmodules  CLAUDE.md  DEVELOPING.md  LICENSE  README.md  TESTING.md  install.ps1  install.sh  neptune.spec  pyproject.toml  runtime_hook.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  test-releases.yml
docs/: RELEASE_PROCESS.md  mcp_installation_guide.md
scripts/: build.sh  bump_version.py
src/neptune_cli/: auth.py  cli.py  client.py  config.py  mcp.py  mcp_instructions.md  types.py  upgrade.py  utils.py  version.py
src/neptune_cli/commands/: deploy.py
src/neptune_cli/services/: deploy.py
src/neptune_mcp/: auth.py  cli.py  client.py  config.py  mcp.py  mcp_instructions.md  observability.py  upgrade.py  utils.py  version.py
