[project]
name = "neptune-cli"
version = "0.1.0"
description = "CLI for Neptune (neptune.dev)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"click>=8.1.0",
	"fastmcp>=2.13.0.2",
	"loguru>=0.7.3",
	"pydantic-settings>=2.11.0",
	"requests>=2.32.5",
	"neptune-api",
	"platformdirs>=4.5.0",
]

[project.optional-dependencies]
dev = [
	"pytest",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
neptune-api = { path = "./neptune-api" }

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]

[project.scripts]
neptune = "neptune_cli.cli:cli"
