[project]
name = "neptune-cli"
version = "0.1.20"
description = "CLI for Neptune (neptune.dev)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.0",
    "fastmcp>=2.13.0.2",
    "loguru>=0.7.3",
    "packaging>=21.0",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.5",
    "platformdirs>=4.5.0",
    "neptune-common @ git+https://github.com/shuttle-hq/neptune-common.git@main",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "pyinstaller>=6.0",
]

[project.scripts]
neptune = "neptune_cli.cli:cli"

[tool.ruff]
line-length = 120
target-version = "py313"
respect-gitignore = true
src = ["src/neptune_cli"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 0
combine-as-imports = true
force-single-line = false
force-wrap-aliases = true
split-on-trailing-comma = true
force-sort-within-sections = true
relative-imports-order = "closest-to-furthest"
default-section = "third-party"
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]
known-first-party = [
    "neptune_cli",
]
